WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83073
Fix usage of LayoutUnits and snapping for scrolling in RenderBox
https://bugs.webkit.org/show_bug.cgi?id=83073
Summary
Fix usage of LayoutUnits and snapping for scrolling in RenderBox
Emil A Eklund
Reported
2012-04-03 14:34:41 PDT
Fix usage of LayoutUnits and snapping for scrolling in RenderBox
Attachments
Patch
(7.41 KB, patch)
2012-04-03 14:48 PDT
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-03
(6.53 MB, application/zip)
2012-04-03 16:35 PDT
,
WebKit Review Bot
no flags
Details
Patch
(7.23 KB, patch)
2012-04-03 17:05 PDT
,
Emil A Eklund
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Emil A Eklund
Comment 1
2012-04-03 14:48:27 PDT
Created
attachment 135434
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-03 16:35:40 PDT
Comment on
attachment 135434
[details]
Patch
Attachment 135434
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12315008
New failing tests: fast/dom/Element/scrollWidth.html
WebKit Review Bot
Comment 3
2012-04-03 16:35:46 PDT
Created
attachment 135453
[details]
Archive of layout-test-results from ec2-cr-linux-03 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-03 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Emil A Eklund
Comment 4
2012-04-03 17:05:47 PDT
Created
attachment 135461
[details]
Patch
Emil A Eklund
Comment 5
2012-04-03 17:13:41 PDT
Turns out we do not snap the scrollWidth in RTL for a reason, had forgotten about that. Good thing we have great the test coverage for this code.
Eric Seidel (no email)
Comment 6
2012-04-03 19:08:35 PDT
Comment on
attachment 135461
[details]
Patch OK.
WebKit Review Bot
Comment 7
2012-04-04 12:10:18 PDT
Comment on
attachment 135461
[details]
Patch Clearing flags on attachment: 135461 Committed
r113223
: <
http://trac.webkit.org/changeset/113223
>
WebKit Review Bot
Comment 8
2012-04-04 12:10:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug